# observation_equations

./: .gitignore  .gitmodules  LICENSE  README.md
codes/: constraint_fixed_optimization_parameter_jacobian.py  constraints_jacobian.py  distance_point_to_plane_quaternion_wc.py  distance_point_to_plane_rodrigues_wc.py  distance_point_to_plane_rodrigues_wc_jacobian.h  distance_point_to_plane_tait_bryan_wc.py  distance_point_to_plane_tait_bryan_wc_jacobian.h  equirectangular_camera_colinearity_quaternion_wc_jacobian.h  equirectangular_camera_colinearity_quaternion_wc_jacobian.py  equirectangular_camera_colinearity_rodrigues_wc_jacobian.h  equirectangular_camera_colinearity_rodrigues_wc_jacobian.py  equirectangular_camera_colinearity_tait_bryan_wc_jacobian.h  equirectangular_camera_colinearity_tait_bryan_wc_jacobian.py  equirectangular_camera_coplanarity_quaternion_wc_jacobian.py  equirectangular_camera_coplanarity_rodrigues_wc_jacobian.py  equirectangular_camera_coplanarity_tait_bryan_wc_jacobian.py  metric_camera_colinearity_euler_ka_fi_om_wc_jacobian.h  metric_camera_colinearity_euler_ka_fi_om_wc_jacobian.py  metric_camera_colinearity_quaternion_wc_jacobian.py  metric_camera_colinearity_rodrigues_wc_jacobian.py  metric_camera_colinearity_tait_bryan_wc_jacobian.py  metric_camera_coplanarity_quaternion_wc_jacobian.py  metric_camera_coplanarity_rodrigues_wc_jacobian.py  metric_camera_coplanarity_tait_bryan_wc_jacobian.py  perspective_camera_plucker_line_quaternion_wc_jacobian.py  perspective_camera_plucker_line_rodrigues_wc_jacobian.h  perspective_camera_plucker_line_rodrigues_wc_jacobian.py  perspective_camera_plucker_line_tait_bryan_wc_jacobian.h  perspective_camera_plucker_line_tait_bryan_wc_jacobian.py  perspective_camera_quaternion_wc_jacobian.h  perspective_camera_quaternion_wc_jacobian.py  perspective_camera_rodrigues_wc_jacobian.py  perspective_camera_tait_bryan_wc_jacobian.py  perspective_camera_with_intrinsics_quaternion_cw_jacobian.h  perspective_camera_with_intrinsics_quaternion_cw_jacobian.py  perspective_camera_with_intrinsics_rodrigues_cw_jacobian.h  perspective_camera_with_intrinsics_rodrigues_cw_jacobian.py  perspective_camera_with_intrinsics_rodrigues_wc_jacobian.py  perspective_camera_with_intrinsics_tait_bryan_cw_jacobian.h  perspective_camera_with_intrinsics_tait_bryan_cw_jacobian.py  (+69 more)
codes/benchmarks/: CMakeLists.txt
codes/benchmarks/data/: info  sphere-opt-g2o.g2o
codes/benchmarks/data/g2o-2D/out_GTSAM/: input_INTEL_g2o_GTSAMout.g2o
codes/benchmarks/data/g2o-2D/out_ceres/: input_INTEL_g2o_out_poses_optimized.txt  input_INTEL_g2o_out_poses_original.txt
codes/benchmarks/data/g2o-2D/out_g2o/: input_INTEL_g2o_out_1000_iter.g2o  input_MITb_g2o_out_1000_iter.g2o
codes/benchmarks/data/g2o-3D/: cubicle.g2o
codes/benchmarks/src/: pose2d_graph_slam.cpp  pose3d_graph_slam.cpp
codes/c++Examples/: .gitmodules  CMakeLists.txt
codes/c++Examples/include/: transformations.h
codes/c++Examples/src/: adaptive_robust_loss_function_demo.cpp  adaptive_robust_loss_function_viewer.cpp  bundle_of_rays_intersection.cpp  ceres_robust_loss_function_viewer.cpp  distance_point_to_plane.cpp  distance_to_circle.cpp  elementary_error_theory_for_terrestrial_laser_scanner.cpp  equirectangular_camera_colinearity_ba.cpp  equirectangular_camera_coplanarity_ba.cpp  georeference-case1.cpp  georeference-case2.cpp  georeference-case4.cpp  m_estimators_functions_viewer.cpp  metric_camera_colinearity_ba.cpp  metric_camera_coplanarity_ba.cpp  mirror-sim.cpp  optimizing_scale_VO_with_lidar_data.cpp  perspective_camera_ba.cpp  perspective_camera_external_orientation_plucker_line.cpp  perspective_camera_intrinsic_calibration.cpp  plane_to_plane.cpp  planes_intersection.cpp  plucker_line_to_plucker_line.cpp  point_to_line.cpp  point_to_plane.cpp  point_to_point.cpp  point_to_point_source_to_landmark.cpp  point_to_point_source_to_target.cpp  point_to_point_with_scale.cpp  point_to_projection_onto_line.cpp  point_to_projection_onto_plane.cpp  pose_interpolation.cpp  rectangular_object_with_unknown_width_height.cpp  relative_pose.cpp  relative_pose_covariances.cpp  sheaf_of_planes.cpp  show_axes.cpp  simple_optimization_problem_func_x_with_constraints.cpp  simple_optimization_problem_func_xy_with_constraints.cpp  smoothness.cpp  (+4 more)
codes/c++ExamplesRealData/: CMakeLists.txt
codes/c++ExamplesRealData/data/pcd/: scan000.pcd  scan001.pcd  scan002.pcd  scan003.pcd  scan004.pcd  scan005.pcd  scan006.pcd  scan007.pcd  scan008.pcd  scan009.pcd  scan010.pcd  scan011.pcd  scan012.pcd
codes/c++ExamplesRealData/src/: particle_filter_demo.cpp  photogrammetry.cpp  point_cloud_registration.cpp  point_cloud_registration_lie_algebra.cpp  rgd.cpp  rgd.h
codes/common/include/: cauchy.h  m_estimators.h  structures.h  transformations.h
codes/python-scripts/: ceres_robust_loss_function.h  ceres_robust_loss_function.py  elementary_error_theory_for_terrestrial_laser_scanner_jacobian.h  elementary_error_theory_for_terrestrial_laser_scanner_jacobian.py  horn.py  plot-csv.py  plucker_line_utils.py  print_rodrigues_R.py  quaternion_R_utils.py  rodrigues_R_utils.py  rodrigues_Rutheta_utils.py  tait_bryan_R_utils.py  uncertainty_calculator.h  uncertainty_calculator.py
codes/python-scripts/camera-metrics/: equirectangular_camera_colinearity_quaternion_wc_jacobian.py  equirectangular_camera_colinearity_rodrigues_wc_jacobian.py  equirectangular_camera_colinearity_tait_bryan_wc_jacobian.h  equirectangular_camera_colinearity_tait_bryan_wc_jacobian.py  equirectangular_camera_coplanarity_quaternion_wc_jacobian.h  equirectangular_camera_coplanarity_quaternion_wc_jacobian.py  equirectangular_camera_coplanarity_rodrigues_wc_jacobian.h  equirectangular_camera_coplanarity_rodrigues_wc_jacobian.py  equirectangular_camera_coplanarity_tait_bryan_wc_jacobian.h  equirectangular_camera_coplanarity_tait_bryan_wc_jacobian.py  fisheye_camera_calibRT_tait_bryan_wc_jacobian.h  fisheye_camera_calibRT_tait_bryan_wc_jacobian.py  metric_camera_colinearity_euler_ka_fi_om_wc_jacobian.py  metric_camera_colinearity_quaternion_wc_jacobian.h  (+34 more)
(+181 files in other folders)
